# lodevem

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
lodevem/: Dockerfile  __init__.py  cli.py  container_measure.py  measure.py  predict.py  profiles.py  reporter.py  runner.py
lodevem/profiles/tier1/: itel_a70.yaml  samsung_a03.yaml  tecno_spark8.yaml
lodevem/profiles/tier2/: itel_a23_pro.yaml  itel_p37.yaml  tecno_pop5_go.yaml
lodevem/profiles/tier3/: itel_it5626.yaml  jiophone2.yaml  nokia_2720_flip.yaml
profiles/tier1/: infinix_hot11s.yaml  nokia_g11.yaml  tecno_pop6.yaml
profiles/tier2/: nokia_c1.yaml  redmi_a1.yaml  samsung_a03_core.yaml
profiles/tier3/: nokia_8110_4g.yaml
