[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lodevem"
version = "0.1.1"
description = "Low-resource Device Virtual Emulator — benchmark PyTorch models on simulated mobile device profiles"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Danchi-1", email = "ohachordaniel2021@gmail.com" }]
keywords = ["machine-learning", "benchmarking", "mobile", "edge-ai", "pytorch", "android"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "nn-meter>=1.4",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

# docker is optional — only needed for full mode (Linux with Docker)
[project.optional-dependencies]
docker = ["docker>=7.0"]
full = ["docker>=7.0"]

[project.urls]
Homepage = "https://github.com/Danchi-1/lodevem"
Repository = "https://github.com/Danchi-1/lodevem"
"Bug Tracker" = "https://github.com/Danchi-1/lodevem/issues"

[project.scripts]
# This is the magic line — makes 'lodevem' a real terminal command
lodevem = "lodevem.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lodevem*"]

# Include device profile YAMLs and the Dockerfile for Docker mode
[tool.setuptools.package-data]
"lodevem" = ["profiles/**/*.yaml", "Dockerfile"]
